# Sonic-Drone

./: service_call.py
AdvanDiptera_discription/: CMakeLists.txt  package.xml
AdvanDiptera_discription/urdf/: AdvanDiptera.xacro  sonic.xacro
Diptera_launch/: .AdvanDiptera_multicamera.launch.swp  .Diptera_px4.launch.swp  AdvanDiptera_all_octomap.launch  AdvanDiptera_multicamera.launch  AdvanDiptera_rviz.launch  AdvanDiptera_vio_tf.launch  CMakeLists.txt  Diptera_obstacle.launch  Diptera_px4.launch  Diptera_vio_forward.launch  camera_laser.launch  package.xml
VIO/launch/: bridge_mavros.launch
auto_mode/: CMakeLists.txt  Diptera_camera.py  package.xml
commanding_node/: CMakeLists.txt  Diptera_CleverObstacle.py  Diptera_Flybase_Auto.py  Diptera_Flybase_Clever.py  Diptera_Flybase_Guided.py  Diptera_Obstacle.py  Diptera_autopilot.py  Diptera_keyboard_control.py  Diptera_lidar.py  VersionOneGuillem.py  circle.py  gpio_clean.py  gpio_diptera.py  package.xml  stigmergy.py  triangle.py  triangle_test.py
commanding_node/launch/: mavros_lite.launch  mavros_lite_lidar.launch  mavros_lite_px4flow.launch  mavros_lite_px4flow_lidar.launch  mavros_px4flow.launch  mavros_px4flow_sonar.launch  (+2 more)
cyglidar_d1/: CMakeLists.txt
database_robot/: CMakeLists.txt  package.xml  robot.db
database_robot/config/: database_robot.yaml
database_robot/launch/: database_robot.launch
database_robot/msg/: Fixture.msg  Mission.msg  Reading.msg  ReadingList.msg  Section.msg  Shop.msg
database_robot/scripts/: database_controller.py
database_robot/scripts/lib/sources/: database_operations.py  parameters.py  response.py
database_robot/srv/: DatabaseRobot.srv
database_robot/tests/: test_database_robot.py
database_robot/tests/test_cases/: test_database_operations.py  test_parameters.py
listener/: CMakeLists.txt  package.xml
listener/src/: keyboard.cpp  listener.cpp  sonic_v2.cpp  square.txt  talker.cpp
listener/srv/: pointService.srv
rfid_controller/: CMakeLists.txt  package.xml
sonic/: CMakeLists.txt  package.xml
steering/: CMakeLists.txt
(+88 files in other folders)
